tests/fixtures/invalid/int_gt_bytes.py
# Cannot compare Int with Bytes using >
x: bool = 1 > b"hello"
